--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,44 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:layout_margin="16dp"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/helloTextView"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/emailInputId"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/beer_adviser_app"
-        android:textColor="@color/red"
-        android:textSize="24sp" />
-    <Spinner
-        android:id="@+id/spinnerId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_gravity="center"
-        android:entries="@array/beerList"
-        />
+        android:hint="@string/enter_email"
+        android:padding="16dp"
+        android:layout_weight="0.3"
+        android:inputType="textEmailAddress"/>
+
+
 
     <EditText
-        android:id="@+id/inputTextId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_soemething" />
+        android:id="@+id/messageInputId"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:hint="@string/message_string"
+        android:inputType="textMultiLine"
+        android:gravity="top|start"
+        android:padding="5dp"
+        android:layout_weight="2"/>
 
     <Button
         android:id="@+id/okButtonId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/okButtonText" />
-    <TextView
-        android:id="@+id/beerTypeTextId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/beer_type"
-        android:layout_margin="16dp"/>
+        android:layout_gravity="end"
+        android:text="@string/okButtonText"
+        />
+
+
 
 </LinearLayout>
