--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="16dp"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:context=".MainActivity">
-
-    <EditText
-        android:id="@+id/emailInputId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_email"
-        android:padding="16dp"
-        android:layout_weight="0.3"
-        android:inputType="textEmailAddress"/>
-
-
-
-    <EditText
-        android:id="@+id/messageInputId"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:hint="@string/message_string"
-        android:inputType="textMultiLine"
-        android:gravity="top|start"
-        android:padding="5dp"
-        android:layout_weight="2"/>
-
-    <Button
-        android:id="@+id/okButtonId"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width= "match_parent"
+    android:layout_height= "match_parent"
+    android:padding="5dp">
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="@string/okButtonText"
+        android:scaleType="centerCrop"
+          android:src="@drawable/test_img"
+android:contentDescription="PhoneImage"
         />
 
 
-
-</LinearLayout>
+</FrameLayout>
