--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,34 +8,45 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <EditText
+    <TextView
         android:id="@+id/emailInputId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_email"
-        android:padding="16dp"
-        android:layout_weight="0.3"
-        android:inputType="textEmailAddress"/>
-
-
-
-    <EditText
-        android:id="@+id/messageInputId"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:hint="@string/message_string"
-        android:inputType="textMultiLine"
-        android:gravity="top|start"
         android:padding="5dp"
-        android:layout_weight="2"/>
+        android:gravity="center"
+        android:text="00:00"
+        android:textSize="40dp"/>
 
-    <Button
-        android:id="@+id/okButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:text="@string/okButtonText"
-        />
+
+
+ <LinearLayout
+     android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:orientation="horizontal"
+     android:layout_gravity="center"
+     android:padding="20dp"
+     android:layout_margin="10dp">
+     <Button
+         android:id="@+id/startButtonId"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="end"
+         android:padding="10dp"
+         android:layout_margin="10dp"
+         android:text="start"/>
+
+     <Button
+         android:id="@+id/stopButtonId"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="end"
+         android:padding="10dp"
+         android:layout_margin="10dp"
+         android:text="end"/>
+
+ </LinearLayout>
+
+
 
 
 
