--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,39 +8,25 @@
     android:padding="16dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/helloTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/beer_adviser_app"
-        android:textColor="@color/red"
-        android:textSize="24sp" />
-    <Spinner
-        android:id="@+id/spinnerId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_gravity="center"
-        android:entries="@array/beerList"
-        />
-
-    <EditText
-        android:id="@+id/inputTextId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/enter_soemething" />
-
+  <Chronometer
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:textSize="50dp"/>
     <Button
-        android:id="@+id/okButtonId"
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/okButtonText" />
-    <TextView
-        android:id="@+id/beerTypeTextId"
+        android:text="@string/start"
+        android:layout_margin="10dp"/>
+    <Button
+        android:id="@+id/stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/beer_type"
-        android:layout_margin="16dp"/>
+        android:text="@string/stop"/>
+    <Button
+        android:id="@+id/reset"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reset"/>
 
 </LinearLayout>
