--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity">
 
   <Chronometer
+      android:id="@+id/chronometer"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="50dp"/>
@@ -19,14 +20,16 @@
         android:text="@string/start"
         android:layout_margin="10dp"/>
     <Button
-        android:id="@+id/stop"
+        android:id="@+id/pause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/stop"/>
+        android:text="@string/pause"
+        android:layout_margin="10dp"/>
     <Button
         android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reset"/>
+        android:text="@string/reset"
+        android:layout_margin="10dp"/>
 
 </LinearLayout>
