--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -12,5 +12,9 @@
         android:textColor="@color/white"
         android:background="@color/red"
         android:text="@string/Welcome_fragment" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/send"/>
 
 </FrameLayout>
