Fragment container, nav host, navgraph, nav controller. Using them We have added fragments and navigated them

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical"
     android:background="@color/black"
@@ -14,7 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:background="@color/white"
-        android:name="com.example.revisionproj1.WelcomeFragment"/>
+
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph ="@navigation/nav_graph"
+        app:defaultNavHost="true"/>
 
 
 
