--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="16dp"
     tools:context=".MainActivity">
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragmentContainerId"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        app:navGraph="@navigation/navgraph"
+        app:defaultNavHost= "true"/>
 
 
 </LinearLayout>
