--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,10 @@
          android:layout_margin="10dp"
          android:text="end"/>
 
+     <ImageView
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"/>
+
  </LinearLayout>
 
 
