code for bottom nav bar, kotlin code for bottom nav bar and nav graph added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,9 @@
         android:name="com.example.revisionproj1.HelpFragment"
         android:label="Help"
         tools:layout="@layout/fragment_help" />
+    <fragment
+        android:id="@+id/sentItemsFragment"
+        android:name="com.example.revisionproj1.SentItemsFragment"
+        android:label="Sent Mails"
+        tools:layout="@layout/fragment_sent_items" />
 </navigation>
